@@ -110,6 +110,38 @@ else
 			include($filename);
 			$current_version++;
 		}
+
+		//Do module autoupgrades 
+		foreach ($gCms->modules as $modulename=>$value)
+		{
+			if (isset($gCms->modules[$modulename]['auto_upgrade_function']))
+			{
+				//Check to see what version we currently have in the database (if it's installed)
+				$module_version = false;
+
+				$query = "SELECT version from ".cms_db_prefix()."modules WHERE module_name = ?";
+				$result = $db->Execute($query, array($modulename));
+				while ($row = $result->FetchRow()) {
+					$module_version = $row['version'];
+				}
+
+				//Check to see what version we have in the file system
+				$file_version = $gCms->modules[$modulename]['Version'];
+
+				if ($module_version)
+				{
+					if (version_compare($file_version, $module_version) == 1)
+					{
+						echo "<p>Upgrading $modulename module...";
+						call_user_func_array($gCms->modules[$modulename]['auto_upgrade_function'], array($gCms, $module_version, $file_version));
+						$query = "UPDATE ".cms_db_prefix()."modules SET version = ? WHERE module_name = ?";
+						$result = $db->Execute($query, array($file_version, $modulename));
+						echo "[Done]</p>";
+					}
+				}
+			}
+		}
+
 		echo "<p>Please review config.php,  modify any new settings as necessary and then reset it's permissions back to a locked state.</p>";
 		echo "<p>CMS is up to date.  Please click <a href=\"index.php\">here</a> to go to your CMS site.</p>";
 	}
